--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
 <a href="index.html">visitar primer deber</a><br>
     <a href="tercerDeber.html">visitar tercer deber</a><br>
-    <a href="actividad1Thinkercad.html">visitar Actividad 1</a><br>
+    <a href="https://fabricioquillupangui1.github.io/prueba1/">visitar Actividad 1</a><br>
     <a href="actividad2Thinkercad.html">visitar Actividad 2</a><br>
      <a href="actividad3Thinkercad.html">visitar Actividad 3</a><br>
     <a href="actividad4Thinkercad.html">visitar Actividad 4</a>
@@ -214,3 +214,4 @@ Objetivos Específicos:<br>
 </section>
 </body>
 </html>
+
