--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@ Objetivos Específicos:<br>
         <h2> Circuito Serie</h2>
         <ul>
             <li><strong>¿Cómo medir voltaje en un circuito serie?</strong><br>
-                Se coloca el multímetro en paralelo con el componente donde se quiere medir el voltaje, conectando las puntas en los extremos del elemento.
-            <img src="https://i.postimg.cc/G23ThG2L/voltaje1.png" width="280">
+                Se coloca el multímetro en paralelo con el componente donde se quiere medir el voltaje, conectando las puntas en los extremos del elemento.<br>
+            <img src="https://i.postimg.cc/G23ThG2L/voltaje1.png" width="280"><br>
             </li>
             <li><strong>¿Cómo medir corriente en un circuito serie?</strong><br>
                 Se debe abrir el circuito e insertar el multímetro en serie, de modo que la corriente fluya a través del medidor.
@@ -214,4 +214,5 @@ Objetivos Específicos:<br>
 </section>
 </body>
 </html>
+
 
