--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ Objetivos Específicos:<br>
             <li><strong>¿Cómo calcular la resistencia equivalente (Req) en un circuito paralelo?</strong><br>
                 Se aplica la fórmula:<br>
                 <code>1/Req = 1/R₁ + 1/R₂ + 1/R₃ + ... + 1/Rn</code>
-            <img src="https://i.ytimg.com/vi/4M0quxGGucc/mqdefault.jpg" width="350">
+            <img src="https://i.ytimg.com/vi/4M0quxGGucc/mqdefault.jpg" align="left" width="350">
             </li>
             <li><strong>¿Cómo calcular la corriente y el voltaje en un circuito paralelo?</strong><br>
                 <ul>
@@ -214,5 +214,6 @@ Objetivos Específicos:<br>
 </section>
 </body>
 </html>
+
 
 
