--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ Objetivos Específicos:<br>
             </li>
             <li><strong>¿Cómo medir corriente en un circuito paralelo?</strong><br>
                 Se mide en cada rama por separado, abriendo el circuito en la rama deseada y conectando el multímetro en serie con esa conexión.
-            <img src="https://www.researchgate.net/profile/Nelson-Sepulveda-7/publication/369681525/figure/fig4/AS:11431281133502412@1680294182732/Figura-3-a-Circuito-con-amperimetro-conectado-en-serie-para-medir-intensidad-de.jpg" align="left" width="350">
+            <img src="https://www.researchgate.net/profile/Nelson-Sepulveda-7/publication/369681525/figure/fig4/AS:11431281133502412@1680294182732/Figura-3-a-Circuito-con-amperimetro-conectado-en-serie-para-medir-intensidad-de.jpg" width="350">
             </li>
             <li><strong>¿Cómo calcular la resistencia equivalente (Req) en un circuito paralelo?</strong><br>
                 Se aplica la fórmula:<br>
@@ -215,6 +215,7 @@ Objetivos Específicos:<br>
 </section>
 </body>
 </html>
+
 
 
 
