--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ Objetivos Específicos:<br>
                 Se mide en cada rama por separado, abriendo el circuito en la rama deseada y conectando el multímetro en serie con esa conexión.
             <img src="https://www.researchgate.net/profile/Nelson-Sepulveda-7/publication/369681525/figure/fig4/AS:11431281133502412@1680294182732/Figura-3-a-Circuito-con-amperimetro-conectado-en-serie-para-medir-intensidad-de.jpg" width="350">
             </li>
-            <li><strong>¿Cómo calcular la resistencia equivalente (Req) en un circuito paralelo?</strong><br>
+            <li><strong>¿Cómo calcular la resistencia equivalente (Req) en un circuito paralelo?</strong>
                 Se aplica la fórmula:<br>
                 <code>1/Req = 1/R₁ + 1/R₂ + 1/R₃ + ... + 1/Rn</code>
             <img src="https://i.ytimg.com/vi/4M0quxGGucc/mqdefault.jpg" align="left" width="350">
@@ -215,6 +215,7 @@ Objetivos Específicos:<br>
 </section>
 </body>
 </html>
+
 
 
 
