--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ Objetivos Específicos:<br>
     </div>
   <h3>PROCEDIMIENTO</h3>
  <h1>Medición en Circuitos Serie y Paralelo</h1>
-div class="serie">
+<div class="serie">
     <h2>Circuito Serie</h2>
     <ul>
         <li>
@@ -243,3 +243,4 @@ div class="serie">
 </section>
 </body>
 </html>
+
