--- a/index.html
+++ b/index.html
@@ -50,12 +50,13 @@
     </style>
 </head>
 <body>
-<a href="index.html">visitar primer deber</a><br>
-    <a href="tercerDeber.html">visitar tercer deber</a><br>
-    <a href="actividad1Thinkercad.html">visitar Actividad 1</a><br>
-    <a href="actividad2Thinkercad.html">visitar Actividad 2</a><br>
-     <a href="actividad3Thinkercad.html">visitar Actividad 3</a><br>
-    <a href="actividad4Thinkercad.html">visitar Actividad 4</a>
+<a href="https://fabricioquillupangui1.github.io/prueba1/">visitar primer deber</a><br>
+    <a href="https://fabricioquillupangui1.github.io/Sistema_de_representaci-n_de_la_informacion/">visitar tercer deber</a><br>
+    <a href="https://fabricioquillupangui1.github.io/actividad1Thinkercad/">visitar Actividad 1</a><br>
+    <a href="https://fabricioquillupangui1.github.io/actividad2Thinkercad/">visitar Actividad 2</a><br>
+     <a href="https://fabricioquillupangui1.github.io/actividad3Thinkercad/">visitar Actividad 3</a><br>
+    <a href="https://fabricioquillupangui1.github.io/actividad4Thinkercad/">visitar Actividad 4</a><br>
+      <a href="https://fabricioquillupangui1.github.io/actividad5Thinkercad/">visitar Actividad 5</a>
     <h2 align="center">Ley de Ohm</h2>
 
     <h2 align="center">TÍTULO DE LA PRÁCTICA<br>
@@ -243,4 +244,5 @@ Objetivos Específicos:<br>
 </section>
 </body>
 </html>
+
 
